Minor fixes and changes